--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
                 <version>0.4.13</version>
                 <configuration>
                     <imageName>${env.docker_registry_host}/${project.artifactId}</imageName>
-                    <dockerDirectory>src/main/docker</dockerDirectory>
+                    <dockerDirectory>${project.basedir}/src/main/docker</dockerDirectory>
                     <useConfigFile>true</useConfigFile>
                     <registryUrl>${env.docker_registry_host}</registryUrl>
                     <!--dockerHost>https://${docker.registry.host}</dockerHost-->
