--- a/infra-automation/deployment-pipeline-codecommit.yaml
+++ b/infra-automation/deployment-pipeline-codecommit.yaml
@@ -223,7 +223,8 @@ Resources:
             build:
               commands:
               - echo Build started on `date`
-              - mvn package docker:build -DpushImage -DdockerImageTags=${TAG} -Dmaven.test.skip=true
+              - mvn package
+              - docker push ${docker_registry_host}/certification:${TAG}
             post_build:
               commands:
               - printenv
