--- a/infra-automation/deployment-pipeline-codecommit.yaml
+++ b/infra-automation/deployment-pipeline-codecommit.yaml
@@ -218,7 +218,7 @@ Resources:
             pre_build:
               commands:
               - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email) | sed 's,https://,,g'
-              - TAG="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
+              - export TAG="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
               - export docker_registry_host=$(echo $REPOSITORY_URI | sed 's=/.*==g')
             build:
               commands:
