--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <repository>${env.docker_registry_host}/${project.artifactId}</repository>
+                    <repository>${env.docker_registry_host}/${env.TAG}</repository>
                     <tag>${project.version}</tag>
                     <buildArgs>
                         <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
