--- a/infra-automation/frontend.yaml
+++ b/infra-automation/frontend.yaml
@@ -3,6 +3,7 @@ Resources:
   FrontendBucket:
     Type: AWS::S3::Bucket
     Properties:
+      BucketName: certification-frontend-vniwjbvwie
       WebsiteConfiguration:
         IndexDocument: index.html
 
